// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building draws three floors 1`] = `
<Building
  floors={3}
>
  <div>
    <span>
      Building
    </span>
    <LiftPanel
      currentLevel={1}
      floors={3}
    >
      <div>
        <span>
          Lift's panel
        </span>
        <ul>
          <li
            key="2"
          >
            3
          </li>
          <li
            key="1"
          >
            2
          </li>
          <li
            className="active"
            key="0"
          >
            1
          </li>
        </ul>
      </div>
    </LiftPanel>
    <Floor
      firstLevel={false}
      key="2"
      lastLevel={true}
      level={3}
    >
      <div>
        <span>
          Floor 
          3
        </span>
        <Component
          downButton={true}
          upButton={false}
        >
          <ul>
            <li>
              Down
            </li>
          </ul>
        </Component>
      </div>
    </Floor>
    <Floor
      firstLevel={false}
      key="1"
      lastLevel={false}
      level={2}
    >
      <div>
        <span>
          Floor 
          2
        </span>
        <Component
          downButton={true}
          upButton={true}
        >
          <ul>
            <li>
              Up
            </li>
            <li>
              Down
            </li>
          </ul>
        </Component>
      </div>
    </Floor>
    <Floor
      firstLevel={true}
      key="0"
      lastLevel={false}
      level={1}
    >
      <div>
        <span>
          Floor 
          1
        </span>
        <Component
          downButton={false}
          upButton={true}
        >
          <ul>
            <li>
              Up
            </li>
          </ul>
        </Component>
      </div>
    </Floor>
  </div>
</Building>
`;

exports[`Building draws two floors 1`] = `
<Building
  floors={2}
>
  <div>
    <span>
      Building
    </span>
    <LiftPanel
      currentLevel={1}
      floors={2}
    >
      <div>
        <span>
          Lift's panel
        </span>
        <ul>
          <li
            key="1"
          >
            2
          </li>
          <li
            className="active"
            key="0"
          >
            1
          </li>
        </ul>
      </div>
    </LiftPanel>
    <Floor
      firstLevel={false}
      key="1"
      lastLevel={true}
      level={2}
    >
      <div>
        <span>
          Floor 
          2
        </span>
        <Component
          downButton={true}
          upButton={false}
        >
          <ul>
            <li>
              Down
            </li>
          </ul>
        </Component>
      </div>
    </Floor>
    <Floor
      firstLevel={true}
      key="0"
      lastLevel={false}
      level={1}
    >
      <div>
        <span>
          Floor 
          1
        </span>
        <Component
          downButton={false}
          upButton={true}
        >
          <ul>
            <li>
              Up
            </li>
          </ul>
        </Component>
      </div>
    </Floor>
  </div>
</Building>
`;

exports[`Building exists 1`] = `
<Building
  floors={1}
>
  <div>
    This is just a House
  </div>
</Building>
`;
